tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_duplicate_struct_field/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Duplicate definitions of struct field with name x found
  ┌─ src/main.nr:3:9
  │
3 │         x: i32,
  │         - First struct field found here
4 │         x: i32,
  │         - Second struct field found here
  │

Aborting due to 1 previous error
